@@ -2,6 +2,7 @@
   * Add Enumerable (incomplete)
   * Update doc/TODO
   * Add Enumerable#partition
+  * Add global evaluate_block($block, $arguments = array()) method
 
 2009-03-12 - Sean Huber (shuber@huberry.com)
   * Update README
